check for online/offline users, added custom redis sismembers method, fix for category view not showing up if it has no topics

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -723,3 +723,14 @@ body .navbar .nodebb-inline-block {
 	  max-height:60px;
 	}
 }
+
+.username-field {
+	.icon-circle {
+		font-size: 12px;
+		color: green;
+	}
+	.icon-circle-blank {
+		font-size: 12px;
+		color: red;
+	}
+}
